--- a/pkglist.sample
+++ b/pkglist.sample
@@ -1,7 +1,7 @@
 devel/git@tiny
 editors/vim
 lang/python
-net/isc-dhcp44-client
+net/dhcpcd
 ports-mgmt/portlint
 ports-mgmt/poudriere-devel
 security/ca_root_nss
